--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   apteka_postgres:
     image: postgres:15
@@ -33,62 +31,12 @@ services:
       - PHP_IDE_CONFIG=serverName=docker
       - YII_ENV=dev
       - YII_DEBUG=true
-    # Команды запуска
     command: >
       sh -c "
-      # Ожидаем готовность БД
-      echo 'Ожидание готовности базы данных...' &&
-      sleep 5 &&
-      
-      # 1. Модифицируем существующий config/db.php для Docker
-      echo 'Настройка конфигурации БД для Docker...' &&
-      # Создаем резервную копию оригинального конфига
-      if [ ! -f 'config/db.php.backup' ]; then
-        cp config/db.php config/db.php.backup
-      fi &&
-      
-      # Создаем конфиг для Docker
-      cat > config/db.php << 'EOF'
-<?php
-return [
-    'class' => 'yii\\db\\Connection',
-    'dsn' => 'pgsql:host=apteka_postgres;port=5432;dbname=apteka_db',
-    'username' => 'adminka',
-    'password' => 'secret',
-    'charset' => 'utf8',
-    'schemaMap' => [
-        'pgsql'=> [
-            'class'=>'yii\\db\\pgsql\\Schema',
-            'defaultSchema' => 'public'
-        ]
-    ],
-    'on afterOpen' => function(\$event) {
-        \$event->sender->createCommand(\"SET timezone TO 'UTC'\")->execute();
-    }
-];
-EOF
-      
-      # 2. Устанавливаем зависимости
-      if [ ! -d 'vendor' ] || [ ! -f 'vendor/autoload.php' ]; then
-        echo 'Установка зависимостей Composer...' &&
-        composer install --no-interaction --no-progress --optimize-autoloader --ignore-platform-reqs
-      else
-        echo 'Зависимости уже установлены, пропускаем...'
-      fi &&
-      
-      # 3. Устанавливаем права
-      echo 'Настройка прав доступа...' &&
-      mkdir -p runtime web/assets &&
+      composer install --ignore-platform-reqs &&
       chmod -R 777 runtime web/assets &&
-      
-      # 4. Применяем миграции БД
-      echo 'Применение миграций базы данных...' &&
       php yii migrate --interactive=0 &&
-      
-      # 5. Запускаем Apache
-      echo 'Запуск веб-сервера...' &&
       apache2-foreground
       "
-
-volumes:
+volumes: 
   postgres_data:
